--- a/RetrofitTest/app/src/main/res/values/strings.xml
+++ b/RetrofitTest/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="loading">Loading...</string>
     <string name="delete">DELETE</string>
+    <string name="addperson">addPerson</string>
 </resources>
