--- a/RetrofitTest/app/src/main/res/values/strings.xml
+++ b/RetrofitTest/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="loading">Loading...</string>
     <string name="delete">DELETE</string>
     <string name="addperson">addPerson</string>
+    <string name="address">Address</string>
+    <string name="surname">Surname</string>
+    <string name="name">Name</string>
+    <string name="telephone">Telephone</string>
+    <string name="departament">Departament</string>
+    <string name="save_person">Save person</string>
 </resources>
