--- a/RetrofitTest/app/src/main/res/values/strings.xml
+++ b/RetrofitTest/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">CrudRetrofit</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="loading">Loading...</string>
     <string name="delete">DELETE</string>
@@ -11,4 +10,6 @@
     <string name="telephone">Telephone</string>
     <string name="departament">Departament</string>
     <string name="save_person">Save person</string>
+    <string name="save_changes">SAVE CHANGES</string>
+    <string name="edit">EDIT</string>
 </resources>
