--- a/RetrofitTest/app/src/main/res/values/strings.xml
+++ b/RetrofitTest/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CrudRetrofit</string>
+    <string name="app_name">CrudRoom</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="loading">Loading...</string>
     <string name="addperson">addPerson</string>
