Implementacion de room

--- a/RoomTest/app/src/main/res/values/strings.xml
+++ b/RoomTest/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="birthdate">Birthdate</string>
     <string name="edit">EDIT</string>
     <string name="delete">DELETE</string>
+    <string name="optionfilter">OptionFilter</string>
 </resources>
