--- a/RoomTest/app/src/main/res/values/strings.xml
+++ b/RoomTest/app/src/main/res/values/strings.xml
@@ -18,4 +18,32 @@
     <string name="edit">EDIT</string>
     <string name="delete">DELETE</string>
     <string name="optionfilter">OptionFilter</string>
+    <string name="profile">perfil</string>
+    <string name="settings">ajustes</string>
+    <string name="logout">fuera</string>
+    <string name="search">search</string>
+    <string name="cerrarSesion">Cerrar sesion</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="email">Email</string>
+    <string name="confirm_password">Confirm password</string>
 </resources>
