--- a/RoomTest/app/src/main/res/values/strings.xml
+++ b/RoomTest/app/src/main/res/values/strings.xml
@@ -32,7 +32,6 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
@@ -45,5 +44,5 @@
     <string name="login">Login</string>
     <string name="register">Register</string>
     <string name="email">Email</string>
-    <string name="confirm_password">Confirm password</string>
+    <string name="repeat_password">Repeat password</string>
 </resources>
